Unicorns Make Us All Happy :carousel_horse:
**Why:**

* :carousel_horse: :gun: :carousel_horse: :gun: :carousel_horse: :gun: UNICORNS ASSEMBLE!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   nginx:
     build: .
+    volumes:
+      - ./unicorn_command:/usr/share/nginx/html
     ports:
       - "80:80"
-    image: carmenpuccio/missile_command-aws
+    image: carmenpuccio/unicorn_command-aws
